tekton/cd/dashboard/overlays/robocat/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ing
  namespace: tekton-pipelines
spec:
  tls:
  - secretName: dashboard-robocat-tekton-dev-tls
    hosts:
    - dashboard.robotcat.tekton.dev
  rules:
  - http:
      paths:
      - backend:
          serviceName: tekton-dashboard
          servicePort: 9097
        path: /*
